# fastapi_app_boilerplate

./: .cz.toml  .env_sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: index.md
migrations/: env.py
src/: main.py
src/api/assignment/: router.py  schemas.py
src/api/authentication/: controller.py  router.py  schemas.py
src/api/authorization/: controller.py  middleware.py  router.py  schemas.py
src/api/role/: router.py  schemas.py
src/api/transaction/: enum_operation_code.py  router.py  schemas.py
src/api/user/: controller.py  router.py  schemas.py
src/communs/: base_model.py  base_model_schema.py  exceptions.py  generic_controller.py  message_schema.py  security.py
src/config/: custom_log.py  settings.py  table_registry.py
src/database/: session.py
src/models/: __init__.py  assignment.py  authorization.py  role.py  transaction.py  user.py
tests/e2e/root/: test_main.py
tests/rest/: main.rest
