[tool.poetry]
name = "fastapi app boilerplate"
version = "0.1.0"
description = "Aplicação modelo para RestAPI usando FastAPI"
authors = ["Marlos Ribeiro <marlos.mgrb@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
